--- a/form.html
+++ b/form.html
@@ -2,8 +2,8 @@
 =========================================================
 Name        : form.html
 Assignment  : Lab 3 Exercise C
-Author(s)   : Mahdi Ansari, William Arthur Philip Louis
-Submission  : May 21, 2030
+Author(s)   : Austin Kim
+Submission  : January 31, 2024
 Description : A simple HTML file for form tag.
 =========================================================
 -->
@@ -18,10 +18,12 @@ Description : A simple HTML file for form tag.
     <form action="#" method="post">
         <fieldset>
             <legend>Personal Information</legend>
-            <!-- Add a label and input field for 'Name' here -->
+            <label for="name">Name:</label><br>
+            <input type="text" id="name" name="name"><br>
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email"><br>
-            <!-- Add a label and input field for 'Password' here, ensure to use the correct type for password fields -->
+            <label for="password">Password:</label><br>
+            <input type="password" id="password" name="password"><br>
         </fieldset>
 
         <fieldset>
@@ -29,11 +31,26 @@ Description : A simple HTML file for form tag.
             <p>Gender:</p>
 			<input type="radio" id="male" name="gender" value="male">
             <label for="male">Male</label><br>
+      <input type="radio" id="female" name="gender" value="female">
+            <label for="female">Female</label><br>
+      <input type="radio" id="female" name="gender" value="other">
+            <label for="other">Other</label><br><br>
             <!-- Create radio buttons for 'Female', and 'Other' gender options -->
 	
             <label for="fruits">Choose a fruit:</label><br>
-            <select id="fruits" name="fruits">
+            <select id="fruits" name="fruits" multiple size = '5'>
 				<option value="apple">Apple</option>
+        <option value="banana">Banana</option>
+        <option value="orange">Orange</option>
+        <option value="pear">Pear</option>
+        <option value="peach">Peach</option>
+        <option value="mango">Mango</option>
+        <option value="blueberry">Blueberry</option>
+        <option value="lemon">Lemon</option>
+        <option value="lime">Lime</option>
+        <option value="strawberry">Strawberry</option><br><br><br><br>
+
+
                 <!-- Add options for various fruits like Banana, Orange, etc. (At least 10 fruits) -->
             </select><br>
 			<!-- Add some attributes to select tag that changes it from a drop menu to a scrollable list.-->
@@ -41,19 +58,29 @@ Description : A simple HTML file for form tag.
 
         <fieldset>
             <legend>Other Elements</legend>
+            <label for="birthday">Birthday</label><br>
+            <input type="date" id="birthday" name="birthday"><br>
             <!-- Add a label and input field for 'Birthday' here, use the appropriate type for date selection -->
             <label for="favcolor">Favorite Color:</label><br>
             <input type="color" id="favcolor" name="favcolor"><br>
+            <label for="quantity">Quantity (between 1 and 5)</label><br>
+            <input type="number" id="quantity" name="quantity" min="1" max="5"><br>
             <!-- Add a label and number input field for 'Quantity', set min to 1 and max to 5 -->
             <label for="range">Range (between 1 and 10):</label><br>
-            <input type="range" id="range" name="range" min="1" max="10"><br>
+            <input type="range" id="range" name="range" min="1" max="10" value="2"><br>
 			<!-- Add an attribute to the range input to set its initial value to 2-->
+            <label for="homepage">Homepage</label><br>
+            <input type="url" id="homepage" name="homepage"><br>
             <!-- Add a label and input field for 'Homepage', use the correct type for URLs -->
             <label for="feedback">Feedback:</label><br>
-			<textarea id="feedback" name="feedback"></textarea><br>
+			<textarea id="feedback" name="feedback" rows="10" cols="60"></textarea><br>
             <!-- Add some attributes to the feedback textarea tag to make it bigger and suitable for editing texts-->
+            <input type="file" id="file" name="file"><br>
             <!-- Add a file input field -->
+            <input type="checkbox" id="subscribe" name="subscribe" value="subscribed">
+            <label for="subscribe">Subscribe to newsletter</label><br>
             <!-- Add a checkbox for 'Subscribe to newsletter' -->
+            <input type="hidden" id="customerId" name="customerId" value="12345">
             <!-- Add a hidden field for 'customerId', set its value to '12345' -->
             <input type="submit" value="Submit">
             <input type="reset" value="Reset">
