Added inputs to the form

--- a/form.html
+++ b/form.html
@@ -2,7 +2,7 @@
 =========================================================
 Name        : form.html
 Assignment  : Lab 3 Exercise C
-Author(s)   : Austin Kim
+Author(s)   : Austin Kim and Matthew Liu
 Submission  : January 31, 2024
 Description : A simple HTML file for form tag.
 =========================================================
